fix some spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 * {
     background-color: #f8f9fa;
     padding: 0;
@@ -9,9 +8,6 @@
 a {
     text-decoration: none; 
 }
-  
-  /* html {
-    font-size: 62.5%; } */
   
 body {
     box-sizing: border-box;
